# vpk-extractor

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
include/: libvpk.h
lib/: libvpk_static.lib
src/: main.c
